# Trainings

./: .gitignore
OpenGL_Training/glCode/: CMakeLists.txt  CMakeLists_uselater.txt  README.txt  cleanup.bat
OpenGL_Training/glCode/data/models/: map.raw  map2.raw  map3.raw
OpenGL_Training/glCode/data/shaders/: first_fs.txt  first_vs.txt  fragsrc.txt  spec_vs.txt  sphere.cc  sphere.txt  toon_fs.txt  toon_vs.txt  vertsrc.txt
OpenGL_Training/glCode/include/glMod/: globject.h
OpenGL_Training/glCode/include/glutMod/: glutmod.h
OpenGL_Training/glCode/src/glMod/: CMakeLists.txt  globject.cc
OpenGL_Training/glCode/src/glutMod/: CMakeLists.txt  glutmod - Copy.cc  glutmod.cc
OpenGL_Training/glCode/src/testApp/: CMakeLists.txt  main.cc
OpenGL_Training/ppt/: OpenGL - Beginners Guide - Agenda.ppt  OpenGL - Beginners Guide.ppt
